-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.1
-
Windows 7
[Windows]: Pressing SHIFT+F10 or the Windows Context Menu key does not show the context menu in a page.
For Gerrit Dashboard: QTBUG-58306 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
204958,4 | Fix translation of Qt::Key_Menu | 5.9 | qt/qtwebengine | Status: MERGED | +2 | 0 |
204959,4 | Remove QWebEngineViewPrivate::m_pendingContextMenuEvent | 5.9 | qt/qtwebengine | Status: MERGED | +2 | 0 |