Fix translation of Qt::Key_Menu

VK_MENU is the virtual key code for the Alt key, but
Qt::Key_Menu is the context menu key which maps to VK_APPS.

Now the menu key can be used to invoke the context menu on web pages.

Task-number: QTBUG-58306
Change-Id: I8674ab84848b5c8732e4d0cf189909191b85d562
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>